# mpc_core

./: Cargo.toml  Dockerfile  README.md
coverage/: tarpaulin-report.html
mpc_core/: Cargo.toml  README.md
mpc_core/benches/: circuits.rs  credit_scoring.rs  multiplications.rs
mpc_core/src/: circuit.rs  hash.rs  leakyand.rs  leakydelta_ot.rs  lib.rs  ot_base.rs  simulator.rs  states.rs  types.rs
mpc_core/src/protocol/: cointossing.rs
mpc_core/tests/: circuits.rs  credit_scoring.rs
mpc_garble_interop/: Cargo.toml  README.md
mpc_garble_interop/src/: lib.rs
mpc_http_client/: Cargo.toml  Dockerfile  README.md  fly.toml
mpc_http_client/benches/: README.md  circuits.rs  credit_scoring.rs  multiplications.rs
mpc_http_client/benches/common/: mod.rs
mpc_http_client/src/: lib.rs  main.rs
mpc_http_client/tests/: add.garble.sdfl1  cli.rs  credit_scoring.rs  echo_server.rs  smart_cookie.rs
mpc_http_server/: Cargo.toml  Dockerfile  README.md  fly.toml
mpc_http_server/src/: engine.rs  lib.rs  main.rs  requests.rs  responses.rs  state.rs  tests.rs  types.rs
