[package]
name = "mpc_http_server"
version = "0.3.0"
edition = "2021"
rust-version = "1.60.0"
description = "HTTP server for secure multi-party computation"
license = "MIT"
categories = ["cryptography", "command-line-utilities"]
keywords = [
    "crypto",
    "secure-computation",
    "garbled-circuits",
    "circuit-description",
    "mpc",
]

[dependencies]
mpc_core = { version = "0.3.0", path = "../mpc_core" }
rocket = { version = "0.5.0", features = ["json"] }
rand = "0.9.1"
rand_chacha = "0.3.1"
bincode = "1.3"
serde_json = "1.0"
uuid = { version = "1.16", features = ["serde", "v4"] }
blake3 = "1.5"
url = "2.5"

# Optional dependencies for binary feature
mpc_garble_interop = { version = "0.3.0", path = "../mpc_garble_interop", optional = true }
figment = { version = "0.10", features = [
    "env",
    "toml",
    "json",
], optional = true }
serde = { version = "1.0", optional = true }

[features]
bin = ["mpc_garble_interop", "figment", "serde"]

[[bin]]
name = "mpc_server"
path = "src/main.rs"
required-features = ["bin"]

[dev-dependencies]
mpc_garble_interop = { version = "0.3.0", path = "../mpc_garble_interop" }

[lib]
bench = false
